--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,12 @@
+Tue Sep 14 01:40:18 2004  Tim Janik  <timj@gtk.org>
+
+	* bse/bsemidireceiver.[hc]*: partially reverted last change of
+	introducing BseMidiControlData. instead, implemented value
+	clamping before calling midi control handlers.
+
+	* bsecxxmodule.cc: removed value clamping logic, pass on minimum
+	and maximum to bse_midi_receiver_add_control_handler().
+
 Tue Sep 14 01:13:26 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecxxmodule.idl:
