--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Tue Sep 14 09:24:27 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesource.[hc]: allow a MIDI channel to be specified together with
+	automation properties. 
+
+	* bsecxxmodule.cc: support automation property specific MIDI channels.
+
 Tue Sep 14 01:40:18 2004  Tim Janik  <timj@gtk.org>
 
 	* bse/bsemidireceiver.[hc]*: partially reverted last change of
