--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep 15 14:40:00 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* artscompressor.cc: Implemented more sensible half-life time computation,
+	which handles corner-cases (very small attack/release times) better.
+
 Sun Sep 12 03:47:11 2004  Tim Janik  <timj@gtk.org>
 
 	* davbassfilter.idl:
