--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,18 @@
+Wed Sep 15 16:39:46 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* artscompressor.idl: Adjusted the threshold [dB] range to [-100,0],
+	which is what was previously valid. This is due to compatibility;
+	from a musicians point of view, thresholds below -30 dB or so probably
+	don't make too much sense.
+	Auto output is now a gui only property, since there are problems with
+	the beast storage mechanism when it comes to properties which depend
+	on each other.
+
+	* artscompressor.cc: Added makeup gain correction factor (from jamin
+	source), which should prevent over correction in automatic output
+	amplification. Added a few CLAMPs to ensure that properties converted
+	from old files will fit into our ranges.
+
 Wed Sep 15 14:40:00 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* artscompressor.cc: Implemented more sensible half-life time computation,
