--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 15 22:48:41 2004  Tim Janik  <timj@gtk.org>
+
+	* *.idl: removed SFI_PARAM_ prefix from option constants.
+
 Tue Sep 14 19:06:12 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesource.proc:
