--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 15 22:48:41 2004  Tim Janik  <timj@gtk.org>
+
+        * *.idl: removed SFI_PARAM_ prefix from option constants.
+
 Wed Sep 15 22:06:03 2004  Tim Janik  <timj@gtk.org>
 
 	* bseiirfilter.c: fixup enum registration, according to recent
