--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,11 @@
+Thu Sep 16 15:59:05 2004  Tim Janik  <timj@gtk.org>
+
+	* sfidl-corecxx.cc: provide a IDType typedef in the synthesis module
+	property structures for the property type IDs use by the implementing
+	effect base object. provide an AutoUpdateCategory typedef in the
+	efefct base object which aliases Synthesis:Module::NeedAutoUpdateTag
+	for effects with :automate: properties.
+
 Wed Sep 15 21:37:17 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-parser.cc: Fixes: printWarning/printError should never be
