--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Sep 16 23:47:36 2004  Tim Janik  <timj@gtk.org>
+
+	* data/beast.xml.in: install mime type definitions.
+
 Thu Sep 16 23:21:58 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: added helper macros to implement libmad specific
