--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 15 16:39:46 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* artscompressor.idl: Improved auto_output tooltip.
+
 Wed Sep 15 22:48:41 2004  Tim Janik  <timj@gtk.org>
 
         * *.idl: removed SFI_PARAM_ prefix from option constants.
