Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

svn path=/trunk/; revision=2555

--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-15 16:27-0400\n"
-"PO-Revision-Date: 2004-09-15 19:50-0400\n"
+"POT-Creation-Date: 2004-09-18 19:37-0400\n"
+"PO-Revision-Date: 2004-09-18 19:50-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
@@ -5336,8 +5336,12 @@ msgid "Auto Output"
 msgstr "Auto Output"
 
 #: plugins/artscompressor.idl:61
-msgid "Adjust the output amplification automatically"
-msgstr "Adjust the output amplification automatically"
+msgid ""
+"Adjust the output amplification automatically according to threshold and "
+"ratio"
+msgstr ""
+"Adjust the output amplification automatically according to threshold and "
+"ratio"
 
 #: plugins/bseadder.c:97 plugins/bsemult.c:60
 msgid "Audio Input 1"
