--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Overview of Changes in BEAST/BSE 0.6.3:
   BseSummation            - a replacement for multiple BseAdder effects
   DavBassFilter           - added trigger input for use in instruments
 * Dialog size and resizing adaptions for 800x600 screens
+* Fixed undo/redo handling across playback activation
 * Fixed error handling when users form cyclic connections
 
 Overview of Changes in BEAST/BSE 0.6.2:
