--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Tue Sep 21 01:03:30 2004  Tim Janik  <timj@gtk.org>
+
+	* bsemidireceiver.[hc]*: BseFreeFunc fixup, ensured the free function
+	is called from the user thread (BSE core thread) without any locks
+	still held.
+
 Mon Sep 20 01:38:14 2004  Tim Janik  <timj@gtk.org>
 
 	* bseproject.proc:
