--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Tue Sep 21 21:31:23 2004  Tim Janik  <timj@gtk.org>
+
+	* sfidl-corec.cc (namespace): don't generate prototypes without 
+	implementations.
+
 Mon Sep 20 21:52:23 2004  Tim Janik  <timj@gtk.org>
 
 	* sfidl-corecxx.cc: generate class definiiitions which may contain
